# Tau_scProteomics

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
notebooks/: 0-Preprocessing.ipynb  1-2-TauProfile.ipynb  1-3-PeptideHeatmap.ipynb  1-Figure1.ipynb  2-Figure2_minipools.ipynb  3-Figure2_singlecells.ipynb  4-Figure3_proteostasis.ipynb  5-Figure4_breakpoint.ipynb
src/: EWCE.R  breakpoint_analysis.py  pathway_score.py  plot_all_datasets.py
